# graphul

./: .pre-commit-config.yaml  BUY-A-COFFEE.md  Cargo.toml  LICENSE  README.md  index.md
.github/: FUNDING.yml
.github/workflows/: clippy.yml  test-lang-rust-audit.yml
examples/: README.md
examples/chat-websocket/: Cargo.toml
examples/chat-websocket/src/: main.rs
examples/chat-websocket/src/chat/: domain.rs  handlers.rs  mod.rs
examples/chat-websocket/templates/: index.html
examples/file-multipart-form/: Cargo.toml
examples/file-multipart-form/src/: main.rs
examples/hello-world/src/: main.rs
examples/multiple-routers/: Cargo.toml
examples/multiple-routers/src/: main.rs  middlewares.rs  routes.rs
examples/multiple-routers/src/middlewares/: check_user.rs
examples/multiple-routers/src/routes/: about.rs  admin.rs  article.rs
examples/rate-limiter/: Cargo.toml
examples/rate-limiter/src/: main.rs
examples/redirect/: Cargo.toml
examples/redirect/src/: main.rs
examples/shuttle-example/: Cargo.toml
examples/shuttle-example/src/: lib.rs
examples/sqlx-postgres/: Cargo.toml
examples/sqlx-postgres/src/: db.rs  main.rs
examples/static-react-spa-app/: Cargo.toml  README.md  run.sh
examples/static-react-spa-app/app/: package-lock.json  package.json
examples/static-react-spa-app/app/public/: index.html
examples/static-react-spa-app/app/src/: App.js  index.js
examples/static-react-spa-app/app/src/pages/: Detail.js  Home.js
examples/static-react-spa-app/src/: data.rs  main.rs
examples/templates/: Cargo.toml
examples/templates/src/: main.rs
examples/tracing/: Cargo.toml
examples/tracing-middleware/: Cargo.toml
examples/tracing-middleware/src/: main.rs
examples/tracing-middleware/src/middlewares/: tracing.rs
examples/tracing/src/middlewares/: tracing.rs
examples/utoipa-swagger-ui/: Cargo.toml  README.md
examples/utoipa-swagger-ui/src/: main.rs  swagger.rs
examples/utoipa-swagger-ui/src/routes/: todo.rs
examples/websocket-example/: Cargo.toml
examples/websocket-example/src/: main.rs
examples/websocket-example/templates/: index.html
src/: app.rs  color.rs  folder.rs  fs.rs  http.rs  lib.rs  listen.rs  template.rs
src/http/: context.rs  methods.rs  request.rs  resource.rs  response.rs
src/middleware/: mod.rs  rate_limit_layer.rs
