[package]
name = "utoipa-swagger-ui"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
graphul = { path = "../../." }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
utoipa = { version="3.0.1", features = ["axum_extras"] }
utoipa-swagger-ui = { version="3.0.2", features = ["axum"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10.0"
log = "0.4"
